2008-06-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords): Try to be
	yet a bit more clever at distinguishing / from /.

2008-06-03  Kenichi Handa  <handa@m17n.org>

	* Makefile.in (ELCFILES): Add $(lisp)/language/hanja-util.elc.

2008-06-03 Jihyun Cho  <jihyun.jo@gmail.com>

	* language/hanja-util.el: New file.

2008-06-03  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-typedef-matcher, f90-looking-at-type-like):
	Check that end-of-word follows "type".

2008-06-02  Daiki Ueno  <ueno@unixuser.org>

	* epa-file.el (epa-file-write-region): Write the entire buffer
	content if START is nil.

2008-06-01  Thomas Morgan  <tlm@thomasmorgan.net>  (tiny change)

	* select.el (x-get-selection): Fix typo.

2008-06-01  Juanma Barranquero  <lekktu@gmail.com>

	* descr-text.el (describe-text-sexp): Use `string-match-p'.  Simplify.
	(describe-char): Use `looking-at-p', `string-match-p' when possible.

2008-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-header-block-summarize): Ensure one space around
	user&group.

2008-05-31  John Paul Wallington  <jpw@pobox.com>

	* help-fns.el (describe-variable-custom-version-info):
	Handle dotted `package-version' info.

2008-05-31  Juanma Barranquero  <lekktu@gmail.com>

	* icomplete.el (icomplete-get-keys): Doc fix.  Use `when'.

2008-05-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-cvs.el (vc-cvs-after-dir-status): Support spaces in file
	names and improve support for unregistered files.

2008-05-31  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (compile-last): Replace tr in `els' assignment with sed.
	Remove shell variable `elc'.  Split tests to hopefully be more portable.
	Fix `sel' assignment.

2008-05-30  Juanma Barranquero  <lekktu@gmail.com>

	* minibuffer.el (completion-table-dynamic): Doc fix.

2008-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-cvs.el (vc-cvs-state-heuristic, vc-cvs-parse-status):