@@ -286,6 +286,9 @@ This variable is used to display the current image type in the mode line.")
 
 (defvar image-mode-map
   (let ((map (make-sparse-keymap)))
+    (suppress-keymap map)
+    (define-key map "q"         'quit-window)
+    ;;
     (define-key map "\C-c\C-c" 'image-toggle-display)
     (define-key map [remap forward-char] 'image-forward-hscroll)
     (define-key map [remap backward-char] 'image-backward-hscroll)
